--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "main": "index.js",
   "scripts": {
     "generate": "ts-node generate.ts",
-    "example": "ts-node example.ts"
+    "test": "mocha -r ts-node/register \"*.test.ts\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/mocha": "^9.0.0",
     "@types/pg": "^8.6.1",
+    "mocha": "^9.1.3",
     "prettier": "2.3.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.5.1-rc"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "fp-ts": "^2.11.1",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
