--- a/cli/package.json
+++ b/cli/package.json
@@ -5,7 +5,7 @@
   "main": "cli.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "generate": "ts-node generate.ts"
   },
   "repository": {
     "type": "git",
