--- a/cli/package.json
+++ b/cli/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "main": "cli.js",
-  "devDependencies": {},
   "scripts": {
-    "generate": "ts-node generate.ts"
+    "dev": "ts-node src/generate.ts"
   },
   "repository": {
     "type": "git",
@@ -16,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/twiggler/twigsync/issues"
   },
-  "homepage": "https://github.com/twiggler/twigsync#readme"
+  "homepage": "https://github.com/twiggler/twigsync#readme",
+  "dependencies": {
+    "yargs": "^17.3.1"
+  },
+  "devDependencies": {
+    "@types/yargs": "^17.0.9"
+  }
 }
