--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -2,6 +2,6 @@
 	"extends": "@tsconfig/node14/tsconfig.json",
 	"compilerOptions": {
 		"outDir": "../out/cli",
-		"sourceMap": true
+		"sourceMap": true,
 	},
 }
