--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -1,7 +1,11 @@
 {
 	"extends": "@tsconfig/node14/tsconfig.json",
 	"compilerOptions": {
-		"outDir": "../out/lib",
+		"outDir": "../dist",
 		"sourceMap": true,
 	},
+	"exclude": [
+		"test",
+		"**/*.test.ts"
+	]
 }
