--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "sync",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "author": "",
-  "license": "ISC",
+  "name": "twigsync",
+  "version": "0.1.0",
+  "description": "Library for synchronizing state between components in a distributed system.",
+  "scripts": {
+    "build": "npm run build --workspace=lib --workspace=cli",
+    "postbuild": "node _build.js build",
+    "clean": "node _build.js clean"
+  },
+  "author": "Roel de Jong",
+  "license": "BSD-3-Clause",
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
     "@tsconfig/recommended": "^1.0.1",
     "@types/mocha": "^9.0.0",
     "@types/pg": "^8.6.1",
+    "fs-extra": "^10.0.1",
     "mocha": "^9.1.3",
     "prettier": "2.3.2",
     "ts-node": "^10.1.0",
